--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <nav>
         <div class="nav-title">
             <a href="#index.html">
-                <h3>Imperial Photos</h3>
+                <h2>Imperial Photos</h2>
             </a>
         </div>
 
         <ul class="nav-links">
             <li><a href="#">home</a></li>
-            <li><a href="$">about</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">services</a></li>
             <li><a href="#">gallery</a></li>
             <li><a href="#">contact</a></li>
         </ul>
@@ -34,8 +35,53 @@
             <h3>Imperial <span class="header-color">Photos</span></h3>
         </div>
     </header>
-    <section class="about">
-        <p>this is the about section</p>
+    <section class="section-content">
+        <div class="section-title">
+            <h3>about <span>us</span></h3>
+        </div>
+        <div class="container">
+            <article class="about-content">
+                <img class="about-img"/>
+            </article>
+            <article class="about-content">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                    Ipsam distinctio assumenda velit perferendis non iste, sit 
+                    qui necessitatibus nam quibusdam, ab odit, voluptas consequatur 
+                    excepturi blanditiis quaerat molestiae sunt? Aut?
+                </p>
+            </article>
+        </div>
+    </section>
+
+    <section>
+        <div class="section-title">
+            <h3>serv<span>ices</span></h3>
+        </div>
+        <article class="service-item">
+            <div class="card-content-1"> 
+
+            </div>
+            <div class="card-footer">
+
+            </div>
+        </article>
+
+        <article class="service-item">
+            <div class="card-content-2">
+
+            </div>
+            <div class="card-footer">
+
+            </div>
+        </article>
+        <article class="service-item">
+            <div class="card-content">
+
+            </div>
+            <div class="card-footer">
+                
+            </div>
+        </article>
     </section>
 </body>
 </html>
