--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h3>Imperial <span class="header-color">Photos</span></h3>
         </div>
     </header>
-    <section class="section-content">
+    <section class="section-content about">
         <div class="section-title">
             <h3>about <span>us</span></h3>
         </div>
@@ -53,7 +53,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="section-content services">
         <div class="section-title">
             <h3>serv<span>ices</span></h3>
         </div>
@@ -79,9 +79,40 @@
 
             </div>
             <div class="card-footer">
-                
+
             </div>
         </article>
     </section>
+
+    <section class="section-content gallery">
+        <div class="section-title">
+            <h3>gall<span>ery</span></h3>
+        </div>
+        <div class="container-2">
+
+        </div>
+    </section>
+
+    <section class="section-content contact">
+        <div class="section-title">
+            <h3>contact <span>us</span></h3>
+        </div>
+
+        <article>
+
+        </article>
+
+        <article>
+
+        </article>
+    </section>
+    <footer class="footer">
+        <p>copyright 2021 all rights reserved</p>
+        <ul class="social-icons">
+            <li><a><i class="fab fa-facebook-square"></i></a></li>
+            <li><a><i class="fab fa-instagram"></i></a></li>
+            <li><a><i class="fab fa-twitter"></i></a></li>
+        </ul>
+    </footer>
 </body>
 </html>
