header concept added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <div class="nav-title">
             <a href="#index.html">
-                <h2>Imperial Photos</h2>
+                <h2>Imperial Photography</h2>
             </a>
         </div>
 
@@ -32,7 +32,7 @@
     </nav>
     <header class="header">
         <div class="header-title">
-            <h3>Imperial <span class="header-color">Photos</span></h3>
+            <h3>Imperial Photography</h3>
         </div>
     </header>
     <section class="section-content about">
