--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
             <h3>Imperial Photography</h3>
         </div>
     </header>
+
     <section class="section-content about">
         <div class="section-title">
             <h3>about <span>us</span></h3>
         </div>
         <div class="container">
             <article class="about-content">
-                <img class="about-img"/>
+                <img class="about-img" src="images/ashley1.jpg"/>
             </article>
             <article class="about-content">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
@@ -49,6 +50,10 @@
                     qui necessitatibus nam quibusdam, ab odit, voluptas consequatur 
                     excepturi blanditiis quaerat molestiae sunt? Aut?
                 </p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                    Sint ducimus libero nostrum? Ipsa quas corrupti, velit, 
+                    obcaecati numquam similique dolores doloremque deserunt 
+                    architecto eveniet fugit.</p>
             </article>
         </div>
     </section>
