footer and styles concepts restructured

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
         <ul class="nav-links">
             <li><a href="#">home</a></li>
-            <li><a href="#">about</a></li>
-            <li><a href="#">services</a></li>
-            <li><a href="#">gallery</a></li>
-            <li><a href="#">contact</a></li>
+            <li><a href="#about">about</a></li>
+            <li><a href="#services">services</a></li>
+            <li><a href="#gallery">gallery</a></li>
+            <li><a href="#contact">contact</a></li>
         </ul>
 
         <ul class="social-icons">
@@ -36,9 +36,9 @@
         </div>
     </header>
 
-    <section class="section-content about">
+    <section class="section-content" id="about">
         <div class="section-title">
-            <h3>about <span>us</span></h3>
+            <h3>about <span class="accent-title">us</span></h3>
         </div>
         <div class="container">
             <article class="about-content">
@@ -58,9 +58,9 @@
         </div>
     </section>
 
-    <section class="section-content services">
+    <section class="section-content" id="services">
         <div class="section-title">
-            <h3>serv<span>ices</span></h3>
+            <h3>services</h3>
         </div>
         <article class="service-item">
             <div class="card-content-1"> 
@@ -91,7 +91,7 @@
 
     <section class="section-content gallery">
         <div class="section-title">
-            <h3>gall<span>ery</span></h3>
+            <h3>gallery</h3>
         </div>
         <div class="container-2">
 
@@ -100,7 +100,7 @@
 
     <section class="section-content contact">
         <div class="section-title">
-            <h3>contact <span>us</span></h3>
+            <h3>contact us</h3>
         </div>
 
         <article>
