refactored the site

--- a/index.html
+++ b/index.html
@@ -9,115 +9,69 @@
     <title>Imperial Photos</title>
 </head>
 <body>
-    <nav>
-        <div class="nav-title">
-            <a href="#index.html">
-                <h2>Imperial Photography</h2>
-            </a>
-        </div>
 
-        <ul class="nav-links">
-            <li><a href="#">home</a></li>
-            <li><a href="#about">about</a></li>
-            <li><a href="#services">services</a></li>
-            <li><a href="#gallery">gallery</a></li>
-            <li><a href="#contact">contact</a></li>
-        </ul>
+     <!-- header -->
+    <header id="home">
 
-        <ul class="social-icons">
-            <li><a><i class="fab fa-facebook-square"></i></a></li>
-            <li><a><i class="fab fa-instagram"></i></a></li>
-            <li><a><i class="fab fa-twitter"></i></a></li>
-        </ul>
-    </nav>
-    <header class="header">
-        <div class="header-title">
-            <h3>Imperial Photography</h3>
-        </div>
+        <!-- navigation -->
+        <nav class="navbar">
+            <div class="nav-center">
+                <!--nav header -->
+                <div class="nav-header">
+                    <h4>Imperial Photography</h4>
+                    <button type="button" class="nav-toggle" id="nav-toggle">
+                        <i class="fas fa-bars"></i>
+                    </button>
+                </div>
+
+                <!--nav-links-->
+                <ul class="nav-links" id="nav-links">
+                    <li>
+                        <a class="nav-link scroll=link" href="#home">home</a>
+                    </li>
+                    <li>
+                        <a class="nav-link scroll=link" href="#about">about</a>
+                    </li>
+                    <li>
+                        <a class="nav-link scroll=link" href="#services">services</a>
+                    </li>
+                    <li>
+                        <a class="nav-link scroll=link" href="#gallery">gallery</a>
+                    </li>
+                    <li>
+                        <a class="nav-link scroll=link" href="#contact">contact</a>
+                    </li>
+                </ul>
+                <!--end of nav-links -->
+
+                <!--nav icons-->
+                <ul class="nav-icons">
+
+                    <li class="nav-icon">
+                        <a href="www.instagram.com" target="blank">
+                            <i class="fab fa-facebook-square"></i>
+                        </a>
+                    </li>
+                    <li class="nav-icon">
+                        <a href="www.instagram.com" target="blank">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li class="nav-icon">
+                        <a href="www.twitter.com" target="blank">
+                            <i class="fab fa-twitter-square"></i>
+                        </a>
+                    </li>
+
+                </ul>
+                <!--end of nav icons-->
+
+                <!--end of nav-header -->
+            </div>
+        </nav>
+        <!-- ened of navigation -->
     </header>
+ <!-- end of header -->
 
-    <section class="section-content" id="about">
-        <div class="section-title">
-            <h3>about <span class="accent-title">us</span></h3>
-        </div>
-        <div class="container">
-            <article class="about-content">
-                <img class="about-img" src="images/ashley1.jpg"/>
-            </article>
-            <article class="about-content">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                    Ipsam distinctio assumenda velit perferendis non iste, sit 
-                    qui necessitatibus nam quibusdam, ab odit, voluptas consequatur 
-                    excepturi blanditiis quaerat molestiae sunt? Aut?
-                </p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                    Sint ducimus libero nostrum? Ipsa quas corrupti, velit, 
-                    obcaecati numquam similique dolores doloremque deserunt 
-                    architecto eveniet fugit.</p>
-            </article>
-        </div>
-    </section>
-
-    <section class="section-content" id="services">
-        <div class="section-title">
-            <h3>services</h3>
-        </div>
-        <article class="service-item">
-            <div class="card-content-1"> 
-
-            </div>
-            <div class="card-footer">
-
-            </div>
-        </article>
-
-        <article class="service-item">
-            <div class="card-content-2">
-
-            </div>
-            <div class="card-footer">
-
-            </div>
-        </article>
-        <article class="service-item">
-            <div class="card-content">
-
-            </div>
-            <div class="card-footer">
-
-            </div>
-        </article>
-    </section>
-
-    <section class="section-content gallery">
-        <div class="section-title">
-            <h3>gallery</h3>
-        </div>
-        <div class="container-2">
-
-        </div>
-    </section>
-
-    <section class="section-content contact">
-        <div class="section-title">
-            <h3>contact us</h3>
-        </div>
-
-        <article>
-
-        </article>
-
-        <article>
-
-        </article>
-    </section>
-    <footer class="footer">
-        <p>copyright 2021 all rights reserved</p>
-        <ul class="social-icons">
-            <li><a><i class="fab fa-facebook-square"></i></a></li>
-            <li><a><i class="fab fa-instagram"></i></a></li>
-            <li><a><i class="fab fa-twitter"></i></a></li>
-        </ul>
-    </footer>
 </body>
 </html>
