hero and banner parial style

--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
             </div>
         </nav>
         <!-- ened of navigation -->
+
+        <div class="hero">
+            <div class="hero-banner">
+                <h1>Imperial Photography</h1>
+                <p>
+                    click the button bellow to read more about us and what we provide!
+                </p>
+                <a href="#services"class="btn hero-btn scroll-link">learn more</a>
+            </div>
+        </div>
     </header>
  <!-- end of header -->
 
