--- a/index.html
+++ b/index.html
@@ -83,5 +83,35 @@
     </header>
  <!-- end of header -->
 
+ <!-- about section -->
+ <section class="section" id="about">
+     <div class="section-title">
+         <h2>About <span>us</span></h2>
+     </div>
+
+     <div class="section-center about-section">
+
+         <article class="about-img">
+             <img src="images/_MG_0860.jpg" alt="female portrait" class="about-img">
+         </article>
+
+         <article class="about-info">
+            <h3>Explore who we are</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Aperiam quisquam labore architecto soluta exercitationem 
+                fuga facilis repudiandae quae. Explicabo, suscipit?
+            </p>
+
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Aperiam quisquam labore architecto soluta exercitationem 
+                fuga facilis repudiandae quae. Explicabo, suscipit?
+            </p>
+         </article>
+     </div>
+ </section>
+ <!-- end of about section-->
+
 </body>
 </html>
