navbar function and service sectiion started

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 
      <!-- header -->
     <header id="home">
-
         <!-- navigation -->
-        <nav class="navbar">
+       <nav class="navbar">
             <div class="nav-center">
                 <!--nav header -->
                 <div class="nav-header">
@@ -47,18 +46,18 @@
                 <!--nav icons-->
                 <ul class="nav-icons">
 
-                    <li class="nav-icon">
-                        <a href="www.instagram.com" target="blank">
+                    <li>
+                        <a href="www.instagram.com" target="blank" class="nav-icon">
                             <i class="fab fa-facebook-square"></i>
                         </a>
                     </li>
-                    <li class="nav-icon">
-                        <a href="www.instagram.com" target="blank">
+                    <li>
+                        <a href="www.instagram.com" target="blank" class="nav-icon">
                             <i class="fab fa-instagram"></i>
                         </a>
                     </li>
-                    <li class="nav-icon">
-                        <a href="www.twitter.com" target="blank">
+                    <li>
+                        <a href="www.twitter.com" target="blank" class="nav-icon">
                             <i class="fab fa-twitter-square"></i>
                         </a>
                     </li>
@@ -69,30 +68,32 @@
                 <!--end of nav-header -->
             </div>
         </nav>
-        <!-- ened of navigation -->
-
+        <!-- end of navbar -->
         <div class="hero">
+
             <div class="hero-banner">
-                <h1>Imperial Photography</h1>
+                <h2>Imperial Photography</h2>
                 <p>
                     click the button bellow to read more about us and what we provide!
                 </p>
                 <a href="#services"class="btn hero-btn scroll-link">learn more</a>
             </div>
+
         </div>
     </header>
  <!-- end of header -->
 
  <!-- about section -->
  <section class="section" id="about">
+
      <div class="section-title">
          <h2>About <span>us</span></h2>
      </div>
 
-     <div class="section-center about-section">
+     <div class="section-center about-center">
 
          <article class="about-img">
-             <img src="images/_MG_0860.jpg" alt="female portrait" class="about-img">
+             <img src="images/ashley1.jpg" alt="female portrait" class="about-img">
          </article>
 
          <article class="about-info">
@@ -108,10 +109,42 @@
                 Aperiam quisquam labore architecto soluta exercitationem 
                 fuga facilis repudiandae quae. Explicabo, suscipit?
             </p>
+            <a href="#" class="btn">read more</a>
          </article>
      </div>
  </section>
- <!-- end of about section-->
 
+ <section class="section" id="services">
+
+    <div class="section-title">
+        <h2>Our services</h2>
+    </div>
+
+    <div class="section-center services-center">
+        <!-- single card-->
+        <article class="service-card">
+            <div class="service-img-container">
+                <img src="" alt="" class="service-img">
+            </div>
+            <div class="service-info">
+                <div class="service-title">
+                    <h4>portraits</h4>
+                </div>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    A voluptatum sequi ut ducimus officiis quam! Amet perferendis 
+                    corrupti exercitationem voluptatem!
+                </p>
+                <div class="service-footer">
+                    
+                </div>
+            </div>
+        </article>
+        <!-- end of single card -->
+    </div>
+ </section>
+ <!-- end of about section--> 
+<script src="app.js">
+</script>
 </body>
 </html>
