service section done working on media queries

--- a/index.html
+++ b/index.html
@@ -124,19 +124,79 @@
         <!-- single card-->
         <article class="service-card">
             <div class="service-img-container">
-                <img src="" alt="" class="service-img">
+                <img src="images/sha-1.jpg" alt="" class="service-img">
+                <p class="service-name">portraits</p>
             </div>
             <div class="service-info">
                 <div class="service-title">
                     <h4>portraits</h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        A voluptatum sequi ut ducimus officiis quam! Amet perferendis 
+                        corrupti exercitationem voluptatem!
+                    </p>
                 </div>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    A voluptatum sequi ut ducimus officiis quam! Amet perferendis 
-                    corrupti exercitationem voluptatem!
-                </p>
                 <div class="service-footer">
-                    
+                    <p>
+                        <span>
+                            <i class="fas fa-camera"></i>
+                        </span>
+                    </p>
+                    <p>from $200 per session</p>
+                </div>
+            </div>
+        </article>
+        <!-- end of single card -->
+
+        <!-- single card-->
+        <article class="service-card">
+            <div class="service-img-container">
+                <img src="images/ashley2.jpg" alt="" class="service-img">
+                <p class="service-name">portraits</p>
+            </div>
+            <div class="service-info">
+                <div class="service-title">
+                    <h4>portraits</h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        A voluptatum sequi ut ducimus officiis quam! Amet perferendis 
+                        corrupti exercitationem voluptatem!
+                    </p>
+                </div>
+                <div class="service-footer">
+                    <p>
+                        <span>
+                            <i class="fas fa-camera"></i>
+                        </span>
+                    </p>
+                    <p>from $200 per session</p>
+                </div>
+            </div>
+        </article>
+        <!-- end of single card -->
+
+        <!-- single card-->
+        <article class="service-card">
+            <div class="service-img-container">
+                <img src="images/sha-1.jpg" alt="" class="service-img">
+                <p class="service-name">portraits</p>
+            </div>
+            <div class="service-info">
+                <div class="service-title">
+                    <h4>portraits</h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        A voluptatum sequi ut ducimus officiis quam! Amet perferendis 
+                        corrupti exercitationem voluptatem!
+                    </p>
+                </div>
+                <div class="service-footer">
+                    <p>
+                        <span>
+                            <i class="fas fa-camera"></i>
+                        </span>
+                    </p>
+                    <p>from $200 per session</p>
                 </div>
             </div>
         </article>
