minor navbar and style tweaks

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <div class="service-footer">
                     <p>
                         <span>
-                            <i class="fas fa-camera"></i>
+                            <i class="fas fa-photo-video"></i>
                         </span>
                     </p>
                     <p>from $200 per session</p>
@@ -178,7 +178,7 @@
         <!-- single card-->
         <article class="service-card">
             <div class="service-img-container">
-                <img src="images/sha-1.jpg" alt="" class="service-img">
+                <img src="images/_MG_0365.jpg" alt="" class="service-img">
                 <p class="service-name">portraits</p>
             </div>
             <div class="service-info">
@@ -193,7 +193,7 @@
                 <div class="service-footer">
                     <p>
                         <span>
-                            <i class="fas fa-camera"></i>
+                            <i class="fas fa-video"></i>
                         </span>
                     </p>
                     <p>from $200 per session</p>
