gallery concept complete

--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
                 <ul class="nav-icons">
 
                     <li>
-                        <a href="www.instagram.com" target="blank" class="nav-icon">
+                        <a href="#" target="blank" class="nav-icon">
                             <i class="fab fa-facebook-square"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="www.instagram.com" target="blank" class="nav-icon">
+                        <a href="#" target="blank" class="nav-icon">
                             <i class="fab fa-instagram"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="www.twitter.com" target="blank" class="nav-icon">
+                        <a href="#" target="blank" class="nav-icon">
                             <i class="fab fa-twitter-square"></i>
                         </a>
                     </li>
@@ -142,7 +142,7 @@
                             <i class="fas fa-camera"></i>
                         </span>
                     </p>
-                    <p>from $200 per session</p>
+                    <p>starting at $200 per session</p>
                 </div>
             </div>
         </article>
@@ -152,11 +152,11 @@
         <article class="service-card">
             <div class="service-img-container">
                 <img src="images/ashley2.jpg" alt="" class="service-img">
-                <p class="service-name">portraits</p>
+                <p class="service-name">events</p>
             </div>
             <div class="service-info">
                 <div class="service-title">
-                    <h4>portraits</h4>
+                    <h4>events</h4>
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                         A voluptatum sequi ut ducimus officiis quam! Amet perferendis 
@@ -169,7 +169,7 @@
                             <i class="fas fa-photo-video"></i>
                         </span>
                     </p>
-                    <p>from $200 per session</p>
+                    <p>from $125 per hour</p>
                 </div>
             </div>
         </article>
@@ -179,11 +179,11 @@
         <article class="service-card">
             <div class="service-img-container">
                 <img src="images/_MG_0365.jpg" alt="" class="service-img">
-                <p class="service-name">portraits</p>
+                <p class="service-name">videography</p>
             </div>
             <div class="service-info">
                 <div class="service-title">
-                    <h4>portraits</h4>
+                    <h4>videography</h4>
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                         A voluptatum sequi ut ducimus officiis quam! Amet perferendis 
@@ -196,11 +196,92 @@
                             <i class="fas fa-video"></i>
                         </span>
                     </p>
-                    <p>from $200 per session</p>
+                    <p>from $100 per hour</p>
                 </div>
             </div>
         </article>
         <!-- end of single card -->
+    </div>
+ </section>
+ <section id="gallery">
+
+    <div class="section-title">
+        <h2>gall<span>ery</span></h2>
+    </div>
+
+    <div class="gallery-center">
+
+        <!--single gallery image-->
+        <article class="gallery-img-container">
+            <img src="images/sha-1.jpg" alt="" class="gallery-img">
+            <a href="#" class="gallery-icon">
+                <i></i>
+            </a>
+        </article>
+        <!-- end of single gallery-->
+
+               <!--single gallery image-->
+               <article class="gallery-img-container">
+                <img src="images/sha-2.jpg" alt="" class="gallery-img">
+                <a href="#" class="gallery-icon">
+                    <i></i>
+                </a>
+            </article>
+            <!-- end of single gallery-->
+
+                   <!--single gallery image-->
+        <article class="gallery-img-container">
+            <img src="images/meg 1.jpg" alt="" class="gallery-img">
+            <a href="#" class="gallery-icon">
+                <i></i>
+            </a>
+        </article>
+        <!-- end of single gallery-->
+
+               <!--single gallery image-->
+               <article class="gallery-img-container">
+                <img src="images/ashley2.jpg" alt="" class="gallery-img">
+                <a href="#" class="gallery-icon">
+                    <i></i>
+                </a>
+            </article>
+            <!-- end of single gallery-->
+
+                   <!--single gallery image-->
+        <article class="gallery-img-container">
+            <img src="images/_MG_0365.jpg" alt="" class="gallery-img">
+            <a href="#" class="gallery-icon">
+                <i></i>
+            </a>
+        </article>
+        <!-- end of single gallery-->
+
+               <!--single gallery image-->
+               <article class="gallery-img-container">
+                <img src="images/sha-1.jpg" alt="" class="gallery-img">
+                <a href="#" class="gallery-icon">
+                    <i></i>
+                </a>
+            </article>
+            <!-- end of single gallery-->
+
+                   <!--single gallery image-->
+        <article class="gallery-img-container">
+            <img src="images/sha-1.jpg" alt="" class="gallery-img">
+            <a href="#" class="gallery-icon">
+                <i></i>
+            </a>
+        </article>
+        <!-- end of single gallery-->
+
+               <!--single gallery image-->
+               <article class="gallery-img-container">
+                <img src="images/sha-1.jpg" alt="" class="gallery-img">
+                <a href="#" class="gallery-icon">
+                    <i></i>
+                </a>
+            </article>
+            <!-- end of single gallery-->
     </div>
  </section>
  <!-- end of about section--> 
