gallery complete with nav functions

--- a/index.html
+++ b/index.html
@@ -215,34 +215,34 @@
         <article class="gallery-img-container">
             <img src="images/sha-1.jpg" alt="" class="gallery-img">
             <a href="#" class="gallery-icon">
-                <i></i>
+                <i class="fas fa-camera-retro"></i>
             </a>
         </article>
         <!-- end of single gallery-->
 
                <!--single gallery image-->
                <article class="gallery-img-container">
-                <img src="images/sha-2.jpg" alt="" class="gallery-img">
+                <img src="images/_MG_0044.jpg" alt="" class="gallery-img">
                 <a href="#" class="gallery-icon">
-                    <i></i>
+                    <i class="fas fa-camera-retro"></i>
                 </a>
             </article>
             <!-- end of single gallery-->
 
                    <!--single gallery image-->
         <article class="gallery-img-container">
-            <img src="images/meg 1.jpg" alt="" class="gallery-img">
+            <img src="images/_MG_0319.jpg" alt="" class="gallery-img">
             <a href="#" class="gallery-icon">
-                <i></i>
+                <i class="fas fa-camera-retro"></i>
             </a>
         </article>
         <!-- end of single gallery-->
 
                <!--single gallery image-->
                <article class="gallery-img-container">
-                <img src="images/ashley2.jpg" alt="" class="gallery-img">
+                <img src="images/_MG_0860.jpg" alt="" class="gallery-img">
                 <a href="#" class="gallery-icon">
-                    <i></i>
+                    <i class="fas fa-camera-retro"></i>
                 </a>
             </article>
             <!-- end of single gallery-->
@@ -251,34 +251,34 @@
         <article class="gallery-img-container">
             <img src="images/_MG_0365.jpg" alt="" class="gallery-img">
             <a href="#" class="gallery-icon">
-                <i></i>
+                <i class="fas fa-camera-retro"></i>
             </a>
         </article>
         <!-- end of single gallery-->
 
                <!--single gallery image-->
                <article class="gallery-img-container">
-                <img src="images/sha-1.jpg" alt="" class="gallery-img">
+                <img src="images/ashley1.jpg" alt="" class="gallery-img">
                 <a href="#" class="gallery-icon">
-                    <i></i>
+                    <i class="fas fa-camera-retro"></i>
                 </a>
             </article>
             <!-- end of single gallery-->
 
                    <!--single gallery image-->
         <article class="gallery-img-container">
-            <img src="images/sha-1.jpg" alt="" class="gallery-img">
+            <img src="images/sha-2.jpg" alt="" class="gallery-img">
             <a href="#" class="gallery-icon">
-                <i></i>
+                <i class="fas fa-camera-retro"></i>
             </a>
         </article>
         <!-- end of single gallery-->
 
                <!--single gallery image-->
                <article class="gallery-img-container">
-                <img src="images/sha-1.jpg" alt="" class="gallery-img">
+                <img src="images/_MG_0036.jpg" alt="" class="gallery-img">
                 <a href="#" class="gallery-icon">
-                    <i></i>
+                    <i class="fas fa-camera-retro"></i>
                 </a>
             </article>
             <!-- end of single gallery-->
