--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
          </article>
      </div>
  </section>
+ <!-- end of about section -->
 
+ <!-- services section -->
  <section class="section" id="services">
 
     <div class="section-title">
@@ -203,6 +205,9 @@
         <!-- end of single card -->
     </div>
  </section>
+ <!-- end of service section -->
+
+ <!--gallery section -->
  <section id="gallery">
 
     <div class="section-title">
@@ -284,7 +289,67 @@
             <!-- end of single gallery-->
     </div>
  </section>
- <!-- end of about section--> 
+ <!-- end of gallery section--> 
+
+ <!--review section -->
+ <section>
+
+ </section>
+ <!-- end of review section -->
+
+ <!-- contact section -->
+ <section>
+
+ </section>
+ <!-- end of contact section -->
+
+ <!-- footer section -->
+ <footer class="section footer">
+     <!-- footer links-->
+    <ul class="footer-links">
+        <li>
+            <a href="#home" class="footer-link scroll-link">home</a>
+        </li>
+        <li>
+            <a href="#bout" class="footer-link scroll-link">about</a>
+        </li>
+        <li>
+            <a href="#services" class="footer-link scroll-link">services</a>
+        </li>
+        <li>
+            <a href="#gallery" class="footer-link scroll-link">gallery</a>
+        </li>
+        <li>
+            <a href="#contact" class="footer-link scroll-link">contact</a>
+        </li>
+    </ul>
+    <!--end of footer links-->
+
+    <!--footer icons -->
+    <ul class="footer-icons">
+        <li>
+            <a href="#" target="blank" class="footer-icon">
+                <i class="fab fa-facebook-square"></i>
+            </a>
+        </li>
+        <li>
+            <a href="#" target="blank" class="footer-icon">
+                <i class="fab fa-instagram"></i>
+            </a>
+        </li>
+        <li>
+            <a href="#" target="blank" class="footer-icon">
+                <i class="fab fa-twitter-square"></i>
+            </a>
+        </li>
+    </ul>
+    <!--end of footer icons-->
+    <p class="copyright">
+        copyright &copy; imperial Photography <span id="date"></span>.
+        all rights reserved
+      </p>
+ </footer>
+<!-- end of footer section -->
 <script src="app.js">
 </script>
 </body>
