started contact concept

--- a/index.html
+++ b/index.html
@@ -298,8 +298,14 @@
  <!-- end of review section -->
 
  <!-- contact section -->
- <section>
+ <section class="section" id="contact">
 
+    <div class="section-title">
+        <h2>contact <span>us</span></h2>
+    </div>
+    <div class="section-center contact-center">
+        
+    </div>
  </section>
  <!-- end of contact section -->
 
