contact concept complete

--- a/index.html
+++ b/index.html
@@ -304,7 +304,23 @@
         <h2>contact <span>us</span></h2>
     </div>
     <div class="section-center contact-center">
-        
+        <article class="contact-img">
+            <img src="images/_MG_0319.jpg" alt="" class="contact-img">
+        </article>
+
+        <article class="contact-info">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Reprehenderit quibusdam quia sit odit suscipit obcaecati 
+                odio facilis minus sequi recusandae.
+            </p>
+            <p>
+                <i class=""></i> phone: 215-555-1234
+            </p>
+            <p>
+                <i class=""></i> email: info@imperialphotography.com
+            </p>
+        </article>
     </div>
  </section>
  <!-- end of contact section -->
