--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
  <!-- end of service section -->
 
  <!--gallery section -->
- <section id="gallery">
+ <section class="section" id="gallery">
 
     <div class="section-title">
         <h2>gall<span>ery</span></h2>
@@ -372,7 +372,6 @@
       </p>
  </footer>
 <!-- end of footer section -->
-<script src="app.js">
-</script>
+<script src="app.js"></script>
 </body>
 </html>
